Changes to work with jdk 18