@@ -1,5 +1,6 @@
 package fr.su.handlers.select;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
 import fr.su.controllers.TableSelection.SelectBody;
@@ -19,14 +20,14 @@ public class RemoteSelectHandler implements SelectHandler {
     ForwardingManager forwardingManager;
 
     @Override
-    public SelectResponse select(SelectBody selectBody) throws IOException {
+    public SelectResponse select(SelectBody selectBody) throws IOException, JsonProcessingException {
         ObjectWriter ow = new ObjectMapper().writer().withDefaultPrettyPrinter();
         String json = ow.writeValueAsString(selectBody);
         Response response = forwardingManager.forwardSelect(json);
-        Object entity = response.getStatus() != 200 ? null : (SelectResponse) response.getEntity();
+        Object entity = response.getStatus() != 200 ? null : response.getEntity();
         List<SelectResponse> list = (List<SelectResponse>) entity;
-        SelectResponse last = list.getLast();
-        list.removeLast();
+        SelectResponse last = list.get(list.size() - 1);
+        list.remove(list.size() - 1);
         return last.merge(list);
     }
 }
